--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "deploy": "npm run typecheck && npm run lint && npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -27,6 +28,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.2.0",
     "globals": "^16.4.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
