--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,12 @@
   "short_name": "Workouts",
   "description": "A minimalist workout timer for custom strength training sessions",
   "start_url": "/workouts/",
+  "scope": "/workouts/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
+  "capture_links": "existing-client-navigate",
+  "handle_links": "preferred",
   "icons": [
     {
       "src": "/workouts/vite.svg",
